Change "type" from "url" to "image_picker" for "cause_icon"

--- a/sections/multirow-social-impact.liquid
+++ b/sections/multirow-social-impact.liquid
@@ -451,7 +451,7 @@
           "default": "#000000"
         },
         {
-          "type": "url",
+          "type": "image_picker",
           "id": "cause_icon",
           "label": "Cause Icon"
         },
