--- a/assets/section-main-product.css
+++ b/assets/section-main-product.css
@@ -251,7 +251,8 @@ fieldset.product-form__input .form__label {
 .product-form__input input[type='radio'].disabled + label {
   border-color: rgba(var(--color-foreground), 0.1);
   color: rgba(var(--color-foreground), 0.6);
-  text-decoration: line-through;
+  /* text-decoration: line-through; */
+  opacity: 0.5;
 }
 
 .product-form__input input[type='radio'].disabled:checked + label,
