--- a/assets/section-main-product.css
+++ b/assets/section-main-product.css
@@ -236,7 +236,7 @@ fieldset.product-form__input .form__label {
 .product-form__input input[type='radio']:checked + label.variant-swatch {
   background-color: transparent;
   color: rgb(var(--color-background));
-  filter: drop-shadow(0 0.1rem 0.2rem rgba(var(--color-foreground), 0.5));
+  filter: drop-shadow(0 6px 10px rgba(var(--color-foreground), 0.75));
 }
 
 .product-form__input input[type='radio']:not(.disabled) + label > .visually-hidden {
