Update multicolumn-support.liquid to change label for title field

--- a/sections/multicolumn-support.liquid
+++ b/sections/multicolumn-support.liquid
@@ -208,7 +208,7 @@
       "type": "inline_richtext",
       "id": "title",
       "default": "Multicolumn",
-      "label": "t:sections.multicolumn.settings.title.label"
+      "label": "Multicolumn Support Page Nav"
     },
     {
       "type": "select",
