--- a/assets/section-main-product.css
+++ b/assets/section-main-product.css
@@ -858,6 +858,7 @@ a.product__text {
 
   .product-media-modal__content > * {
     width: 100%;
+    max-width: 100%;
   }
 
   .product-media-modal__content > * + * {
